// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Offline should remove event listeners when unmounting 1`] = `
Array [
  Array [
    "online",
    [Function],
  ],
  Array [
    "offline",
    [Function],
  ],
]
`;

exports[`Offline should render children when offline 1`] = `
<Offline
  polling={true}
  wrapperType="span"
>
  <h1>
    Hello World
  </h1>
</Offline>
`;

exports[`Offline should render children when offline and using a custom polling URL 1`] = `
<Offline
  polling={
    Object {
      "url": "https://www.google.com/",
    }
  }
  wrapperType="span"
>
  <h1>
    Hello World
  </h1>
</Offline>
`;

exports[`Online should remove event listeners when unmounting 1`] = `
Array [
  Array [
    "online",
    [Function],
  ],
  Array [
    "offline",
    [Function],
  ],
]
`;

exports[`Online should render children when online 1`] = `
<Online
  polling={true}
  wrapperType="span"
>
  <h1>
    Hello World
  </h1>
</Online>
`;

exports[`Online should render children when online and using a custom polling URL 1`] = `
<Online
  polling={true}
  pollingUrl="https://www.google.com/"
  wrapperType="span"
>
  <h1>
    Hello World
  </h1>
</Online>
`;
